add stock search api
